# moat

./: .gitignore  CONTRIBUTION.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  build.rs  docker-compose.yml  main.rs
.devcontainer/: Dockerfile  devcontainer.json
bpf-firewall/: Cargo.toml  filter.skel.rs
bpf-firewall/src/: access_rules.rs  app_state.rs  cli.rs  firewall.rs  main.rs
bpf-firewall/src/bpf/: filter.bpf.c
bpf-firewall/src/ssl/: mod.rs  tls_fingerprint.rs
bpf-firewall/src/utils/: mod.rs
go-proxy/: Dockerfile  go.mod  go.sum  main.go
moat/: Cargo.toml
moat/src/: access_log.rs  access_rules.rs  cli.rs  domain_filter.rs  firewall.rs  http.rs  main.rs
moat/src/bpf/: filter.bpf.c  filter.h  vmlinux.h
moat/src/ssl/: mod.rs  tls_fingerprint.rs
moat/src/utils/: mod.rs
src/: main.rs  tls_fingerprint.rs
src/bpf/: filter.bpf.c
