[package]
name = "bpf-firewall"
version = "0.1.0"
edition = "2024"

[build-dependencies]
libbpf-cargo = "0.25.0"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
libbpf-rs = "0.25.0"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
  "sync",
] }
anyhow = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = [
  "server",
  "tokio",
  "client-legacy",
  "http1",
] }
http-body-util = "0.1"
plain = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.29.0", features = ["net", "fs"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio-rustls = "0.26.4"
rustls = { version = "0.23.12", default-features = false, features = [
  "std",
  "ring",
  "logging",
] }
rustls-pemfile = "2.1.2"
rustls-acme = { version = "0.14.1", default-features = false, features = [
  "tokio",
  "ring",
  "tls12",
] }
webpki-roots = "0.26"
async-trait = "0.1.81"
sha2 = "0.10.8"
tokio-stream = { version = "0.1.15", features = ["net"] }
hex = "0.4.3"
bytes = "1.7.1"
futures = "0.3.31"
futures-rustls = "0.26.0"
tls-parser = "0.12.2"
reqwest = "0.12"
